# DomainPartition

./: CMakeLists.txt  CMakeUserPresets.json.template  Partition.md
.claude/: launch.json
src/: CMakeLists.txt  DDMPartition.cc  DDMPartition.hh  DDMPartition_test.cc  MPIHelper.hh  anyprint.hh
src/ddm/: DDMExchange.cc  DDMExchange.hh  DDMPartition.cc  DDMPartition.hh  DDMPartition_test.cc  DataEntry.hh  Expr.hh
src/util/: MPIHelper.hh  MPITraits.hh  anyprint.hh
test/: CMakeLists.txt  MPIHelper.hh  mpitest.cc
